<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditorActivity">




            <!-- Name field -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_book_name"/>


            <EditText
                android:id="@+id/edit_book_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textCapWords" />
        </LinearLayout>



            <!-- Price field -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" 
                    android:text="@string/hint_book_price"/>


                <EditText
                    android:id="@+id/edit_book_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </LinearLayout>
            
            

            <!-- Quantity field -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" 
                    android:text="@string/hint_book_quantity"/>

                <EditText
                    android:id="@+id/edit_book_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"/>

            </LinearLayout>
            

            <!--Supplier field -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" 
                    android:text="@string/hint_book_supplier"/>
                
                <EditText
                android:id="@+id/edit_book_supplier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text" />
            
            </LinearLayout>
            

            <!-- Supplier phone field -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_book_phone"/>

            <EditText
                android:id="@+id/edit_book_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="phone" />
            </LinearLayout>



</LinearLayout>